# regolith

./: CMakeLists.txt  ConePenetrationTest.cpp  Dockerfile  README.md  regolith.example.yaml  utils.cpp
plotting/: area_plot.py  parameters_plot.py  plot.py  resistance_plot.py
simulations/: CMakeLists.txt
simulations/CollisionDemo/: CMakeLists.txt  Collision.cpp  Collision.h  main.cpp
simulations/ConePenetrationTest/: CMakeLists.txt  ConePenetrationTest.cpp  ConePenetrationTest.h  config.example.yaml  main.cpp  main_gui.cpp
simulations/ResponseAngle/: CMakeLists.txt  ResponseAngle.cpp  ResponseAngle.h  main.cpp
simulations/common/: main.cpp  main_gui.cpp
src/: CMakeLists.txt  Regolith.cpp  Regolith.h  profiled.h  simprof.cpp  simprof.h  utils.cpp  utils.h
