
function(create_simulation)
  set(common_libs regolith utils yaml-cpp packgen simprof nlohmann_json)
  get_filename_component(sim_name ${CMAKE_CURRENT_LIST_DIR} NAME)
  message(STATUS "Defining executables for simulation: ${sim_name}")
  file( GLOB SOURCES *.cpp )
  add_executable(${sim_name} ../common/main.cpp "${SOURCES}")
  include_directories(${CMAKE_CURRENT_LIST_DIR})
  target_link_libraries(${sim_name} "${common_libs}" "${BULLET_LIBRARIES}" LinearMath pthread)

  add_definitions(-DB3_USE_STANDALONE_EXAMPLE -DBT_ENABLE_PROFILE)
  add_executable(${sim_name}_gui ../common/main_gui.cpp "${SOURCES}")
  target_link_libraries(${sim_name}_gui "${common_libs}" OpenGLWindow BulletExampleBrowserLib Bullet3OpenCL_clew Bullet3Common "${BULLET_LIBRARIES}" LinearMath dl pthread)
endfunction()

file( GLOB subdirs ./* )
foreach(subdir ${subdirs})
  if(IS_DIRECTORY ${subdir})
    get_filename_component(sim_name ${subdir} NAME)
    if(NOT ${sim_name} MATCHES common)
      add_subdirectory(${sim_name})
    endif()
  endif()
endforeach()
